dark mode partial

--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -1,5 +1,1 @@
-@import "./pages/HomePage";
-@import "./pages/About";
-@import "./pages/Works";
-@import "./components/Navigation";
-@import "components/ThemeToggleButton";
+@import "styles";
