--- a/src/style/_styles.scss
+++ b/src/style/_styles.scss
@@ -3,11 +3,13 @@
 }
 
 .globaltheme.light {
+  height: 100vh;
   background: #333;
   color: #f1f1f1;
 }
 
 .globaltheme.dark {
+  height: 100vh;
   background: #f1f1f1;
   color: #333;
 }
