--- a/src/components/ThemeToggleButton/ToggleButton.css
+++ b/src/components/ThemeToggleButton/ToggleButton.css
@@ -4,8 +4,8 @@
   right: 20px;
   width: 50px;
   height: 50px;
-  background: #333;
-  border: 1px solid #333;
+  background: #191006;
+  border: 1px solid lightgray;
   color: #f1f1f1;
   border-radius: 50%;
   display: flex;
@@ -16,11 +16,11 @@
 }
 
 .btn-toggle.goLight {
-  background: #333;
+  background: #191006;
   color: #f1f1f1;
 }
 
 .btn-toggle.goDark {
   background: #f1f1f1;
-  color: #333;
+  color: #191006;
 }
